Reformant arguments